# ssm

./: .gitignore  Makefile  README.md  docker-compose.yaml  run.bat
backend/: Dockerfile  app_types.py  cli.py  consts.py  elliptic_ssm.py  multiprocess_run.py  pyproject.toml  server.py
data/: .gitignore
data/grids/: grid.original.json
data/storms/amphan-2020/: track.json
data/storms/bulbul-2019/: kuakata.observed.json  kuakata.observed.outlier.removed.json  track.interpolated.surge.tide.geojson  track.json
frontend/: .prettierignore  Dockerfile  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: card.tsx  coast.card.tsx  coast.map.tsx  coast.page.tsx  coast.timeseries.tsx  config.card.tsx  contour.bands.tsx  form.input.tsx  grid.config.card.tsx  grid.config.form.tsx  grid.map.tsx  grid.page.tsx  grid.storm.map.tsx  grid.tsx  load.file.tsx  location.tsx  nav.tsx  point.selection.mode.tsx  progress.bar.tsx  progress.modal.tsx  run.program.tsx  storm.loader.tsx  storm.tsx  uvz.toggle.tsx  zeta.card.tsx  zeta.info.card.tsx  zeta.map.tsx  zeta.page.tsx  zeta.tsx
frontend/src/hooks/: grid.fit.ts  grid.select.ts  image.ts
frontend/src/routes/: __root.tsx  coast.lazy.tsx  coast.tsx  contour.lazy.tsx  index.tsx  test.lazy.tsx  zeta.lazy.tsx  zeta.tsx
frontend/src/stores/: coast.ts  grid.ts  index.ts  storm.ts  zeta.ts
frontend/src/utils/: api.ts  colors.ts  file.load.tsx  formats.ts  grid.ts  types.ts
